common-applications/test-environment/gitea-repo-sh-02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  name: gitea-repo-sh-02-ingress
  namespace: gitea-repo-sh-02
spec:
  tls:
    - hosts:
      - space.modelfoundry.test.osinfra.cn
      secretName: gitea-repo-sh-02-tls
  rules:
    - host: space.modelfoundry.test.osinfra.cn
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitea-repo-sh-02
              port:
                number: 3000
